fixed visuals for dark mode

--- a/weigh-in-frontend/src/App.css
+++ b/weigh-in-frontend/src/App.css
@@ -1,4 +1,5 @@
-#root {
+/* App.css */
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -11,9 +12,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -40,3 +43,9 @@
 .read-the-docs {
   color: #888;
 }
+
+@media (prefers-color-scheme: dark) {
+  .read-the-docs {
+    color: #888;
+  }
+} */
